--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,8 @@ jobs:
         run: pip install poetry
       - name: Install dependencies
         run: poetry install --no-interaction
+      - name: Debug check black
+	run: poetry run which black
       - name: Check code format
         run: black --check .
       - name: Run tests
