--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Debug check black
         run: poetry run which black
       - name: Check code format
-        run: black --check .
+        run: black .
       - name: Run tests
         run:  pytest -r P --cov=pygraph
       - name: Generate docs
