--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,11 +17,11 @@ jobs:
         run: pip install pre-commit
       - name: Install pre-commit hooks
         run: pre-commit install
-      - name: Debug check black
-        run: poetry run which black
+      - name: Install dependencies
+        run: poetry install --with dev
       - name: Check code format
-        run: black --check .
+        run: poetry run black --check .
       - name: Run tests
-        run:  pytest -r P --cov=pygraph
+        run: poetry run pytest -r P --cov=pygraph
       - name: Generate docs
-        run: pdoc --html pygraph -o html/
+        run: poetry run pdoc --html pygraph -o html/
